# WFA2-lib

./: .gitignore  pyproject.toml  wfa2_sequence_analysis.py
tools/align_benchmark/: align_benchmark.c  align_benchmark_params.c  align_benchmark_params.h
tools/align_benchmark/benchmark/: benchmark_edit.c  benchmark_gap_affine.c  benchmark_gap_affine2p.c  benchmark_gap_linear.c  benchmark_indel.c  benchmark_utils.c  benchmark_utils.h
