[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfa2-sequence-analysis"
version = "1.0.0"
description = "WFA2 Sequence Analysis Tool - Fast pairwise sequence alignment"
readme = "WFA2_ANALYSIS_README.md"
authors = [
    {name = "WFA2 Analysis Tool", email = "analysis@wfa2.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/smarco/WFA2-lib"
Repository = "https://github.com/smarco/WFA2-lib"
Documentation = "https://github.com/smarco/WFA2-lib"

[project.scripts]
wfa = "wfa2_sequence_analysis:main"

[tool.setuptools]
py-modules = ["wfa2_sequence_analysis"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
